--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,7 +34,7 @@ jobs:
         key: ${{ runner.os }}-${{runner.arch}}-${{ hashFiles('**/vcpkg.json') }}
 
     - name: vcpkg bootstrap and install dependencies
-      run: mkdir -p ${{env.VCPKG_DEFAULT_BINARY_CACHE}} ${{github.workspace}}/vcpkg-packages/bootstrap-vcpkg.sh; ${{github.workspace}}/vcpkg-packages/vcpkg install
+      run: mkdir -p ${{env.VCPKG_DEFAULT_BINARY_CACHE}}; ${{github.workspace}}/vcpkg-packages/bootstrap-vcpkg.sh; ${{github.workspace}}/vcpkg-packages/vcpkg install
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
