--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,8 +5,9 @@ target_link_libraries(test)
 
 add_executable(benchmark benchmark.cpp)
 find_package(benchmark CONFIG REQUIRED)
+find_package(cppzmq CONFIG REQUIRED)
 target_link_libraries(benchmark PRIVATE benchmark::benchmark benchmark::benchmark_main)
 
 find_package(GTest CONFIG REQUIRED)
-target_link_libraries(test PRIVATE GTest::gtest_main GTest::gmock backend)
+target_link_libraries(test PRIVATE GTest::gtest_main GTest::gmock backend cppzmq-static)
 gtest_discover_tests(test)
